--- a/SuitsMe.Core.Tests/SuitsMe.Core.Tests.csproj
+++ b/SuitsMe.Core.Tests/SuitsMe.Core.Tests.csproj
@@ -43,10 +43,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\DeckTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Models\" />
+    <ProjectReference Include="..\SuitsMe.Core\SuitsMe.Core.csproj">
+      <Project>{B554E984-0CD8-4D18-9727-57F579FDA1F2}</Project>
+      <Name>SuitsMe.Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
