--- a/SuitsMe.Core.Tests/SuitsMe.Core.Tests.csproj
+++ b/SuitsMe.Core.Tests/SuitsMe.Core.Tests.csproj
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Models\DeckTests.cs" />
+    <Compile Include="DeckTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
